syntax = "proto3";
package common;

option java_package = "com.arnold.msg.proto.common";
option java_outer_classname = "CommonProto";
option java_multiple_files = true;

enum ClusterKindEnum {
    IN_MEMORY = 0;
    KAFKA = 1;
}

enum DeliverySemanticEnum {
    AT_LEAST_ONCE = 0;
    AT_MOST_ONCE = 1;
}

message DataServer {
    string host = 1;
    int32 port = 2;
}

message QueueInfo {
    string name = 1;
    string cluster = 2;
}

message ClusterInfo {
    string name = 1;
    ClusterKindEnum kind = 2;
    map<string, string> provider = 3;
}

message Pagination {
    int32 page = 1;
    int32 size = 2;
    string sort_by = 3;
}

message ConsumerInfo {
    string name = 1;
    string cluster = 2;
    string queue = 3;
    DeliverySemanticEnum semantic = 4;
}

message ProducerInfo {
    string name = 1;
    string cluster = 2;
}
